# diffusion2D

./: README.md  pyproject.toml  setup.py  test.py
tischlre_diffusion2d/: diffusion2d.py
